--- a/final_project/static/styles.css
+++ b/final_project/static/styles.css
@@ -14,6 +14,12 @@ nav .navbar-brand
 {
     color: #ee544c;
 }
-.li {
-    display: inline;
+
+/* Button Config */
+.button{
+    background-color:orange;
+    border: none;
+  }  
+.button:hover{
+    background-color:red
   }
