--- a/final_project/templates/layout.html
+++ b/final_project/templates/layout.html
@@ -22,7 +22,7 @@
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse ms-auto" id="navbarNav">
+                <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item"><a class="nav-link" href="/search">Chemical Search</a></li>
                       <li class="nav-item"><a class="nav-link" href="/data">Database</a></li>
