--- a/final_project/templates/layout.html
+++ b/final_project/templates/layout.html
@@ -26,9 +26,8 @@
                     <ul class="navbar-nav">
                       <li class="nav-item"><a class="nav-link" href="/search">Chemical Search</a></li>
                       <li class="nav-item"><a class="nav-link" href="/data">Database</a></li>
-                  <!--    <li class="nav-item">
-                   <a class="nav-link" href="#">Buy Chemical</a> 
-                      </li> -->
+                      <li class="nav-item"><a class="nav-link" href="#">Buy Chemical</a></li>
+                      <li class="nav-item"><a class="nav-link" href="#">Chemical Log</a></li> 
                     </ul>
                   </div>
         </div>
