--- a/final_project/templates/layout.html
+++ b/final_project/templates/layout.html
@@ -25,7 +25,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item"><a class="nav-link" href="/search">Chemical Search</a></li>
-                      <li class="nav-item"><a class="nav-link" href="/data">Database</a></li>
+                      <li class="nav-item"><a class="nav-link" href="/search">Chemical Database</a></li>
+                      <li class="nav-item"><a class="nav-link" href="/data">SDS</a></li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto ml-5">
                       <li class="nav-item"><a class="nav-link" href="#">Buy Chemical</a></li>
                       <li class="nav-item"><a class="nav-link" href="#">Chemical Log</a></li> 
                     </ul>
