--- a/final_project/templates/search_details.html
+++ b/final_project/templates/search_details.html
@@ -5,5 +5,12 @@
 {% endblock %}
 
 {% block main %}
-    
+    <p class ="search">CAS Number for {{chemical}} : {{cas_number}}<p>
+        <div class ="mt-5">
+        <form action="/search_details" method="post">
+            <input id='chemical' type= "hidden" name = 'chemical' value = {{chemical}}>
+            <input id='cas_number' type= "hidden" name = 'cas_number' value = {{cas_number}}>
+            <button class="btn button btn-primary mt-3" type="submit">Save CAS</button>
+        </form>
+        </div>
 {% endblock %}
