--- a/final_project/templates/layout.html
+++ b/final_project/templates/layout.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item"><a class="nav-link" href="/search">Chemical Search</a></li>
-                      <li class="nav-item"><a class="nav-link" href="/search">Chemical Database</a></li>
+                      <li class="nav-item"><a class="nav-link" href="/cas_database">Chemical Database</a></li>
                       <li class="nav-item"><a class="nav-link" href="/data">SDS</a></li>
                     </ul>
                     <ul class="navbar-nav ms-auto ml-5">
