order log developed

--- a/final_project/templates/cas_database.html
+++ b/final_project/templates/cas_database.html
@@ -41,7 +41,7 @@
     
 <main class="container py-5">
 
-    <input type="text" class="cd-search table-filter" placeholder="Search Chemicals" 
+    <input type="text" class="cd-search table-filter search" placeholder="Search Chemicals" 
     data-table = "cas_table" id="search_input" onkeyup="search_table()"/>
 
     <table class="table table-striped" id = "cas_table"name= "cas_table">
