--- a/final_project/static/styles.css
+++ b/final_project/static/styles.css
@@ -24,9 +24,53 @@ nav .navbar-brand
     background-color:red
   }
 
+.buy_button{
+    background-color:orange;
+    border: none;
+    position: absolute;
+    margin-top: 110px;
+    margin-right: 120px;
+    width:200px;
+  }  
+.buy_button:hover{
+    background-color:red
+  }
+
 /* search_details config */
 
-.search{
-    color : blue;
-    font-size: 25px;
+.search {
+    display:flex;
+    flex-direction: row;
+    position: relative;
+    width:200px;
+}
+.search_CAS {
+    text-align: center;
+    color:blue;
+    font-size: 30px;
+    margin-top:100px
+}
+
+.buy_request {
+    padding-top: 4%;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-right: 80px;
+
+  }
+
+  /* select config*/
+
+.select_tab {
+    position: absolute;
+    margin-top: 48px;
+    margin-left: 630px;
+    width:200px;
+}
+.priority_tab {
+    position: absolute;
+    margin-top: 110px;
+    margin-left: 0px;
+    width:200px;
 }
