--- a/final_project/templates/layout.html
+++ b/final_project/templates/layout.html
@@ -29,8 +29,8 @@
                       <li class="nav-item"><a class="nav-link" href="/data">SDS</a></li>
                     </ul>
                     <ul class="navbar-nav ms-auto ml-5">
-                      <li class="nav-item"><a class="nav-link" href="#">Buy Chemical</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#">Chemical Log</a></li> 
+                      <li class="nav-item"><a class="nav-link" href="/buy">Buy Chemical</a></li>
+                      <li class="nav-item"><a class="nav-link" href="/purchase_database">Order Log</a></li> 
                     </ul>
                   </div>
         </div>
