--- a/final_project/templates/search.html
+++ b/final_project/templates/search.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <form action="/search" method="post">
-        <div class="mb-3">
+        <div>
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto mt-5" id="chemical" name="chemical" placeholder="Chemical" type="text">
         <button class="btn button btn-primary mt-3" type="submit">Search</button>
     </form>
