--- a/final_project/templates/search_details.html
+++ b/final_project/templates/search_details.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <p class ="search">CAS Number for {{chemical}} : {{cas_number}}<p>
+    <p class ="search_CAS">CAS Number for {{chemical}} : {{cas_number}}<p>
         <div class ="mt-5">
         <form action="/search_details" method="post">
             <input id='chemical' type= "hidden" name = 'chemical' value = '{{chemical}}'>
