sds search completed

--- a/final_project/templates/search.html
+++ b/final_project/templates/search.html
@@ -8,6 +8,6 @@
     <form action="/search" method="post">
         <div>
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto mt-5" id="chemical" name="chemical" placeholder="Chemical" type="text">
-        <button class="btn button btn-primary mt-3" type="submit">Search</button>
+        <button class="btn button btn-primary mt-3" type="submit">Search for CAS</button>
     </form>
 {% endblock %}
