--- a/final_project/templates/layout.html
+++ b/final_project/templates/layout.html
@@ -26,7 +26,7 @@
                     <ul class="navbar-nav">
                       <li class="nav-item"><a class="nav-link" href="/search">Chemical Search</a></li>
                       <li class="nav-item"><a class="nav-link" href="/cas_database">Chemical Database</a></li>
-                      <li class="nav-item"><a class="nav-link" href="/data">SDS</a></li>
+                      <li class="nav-item"><a class="nav-link" href="/sds">SDS</a></li>
                     </ul>
                     <ul class="navbar-nav ms-auto ml-5">
                       <li class="nav-item"><a class="nav-link" href="/buy">Buy Chemical</a></li>
