stock volume search capabilities added

--- a/final_project/templates/layout.html
+++ b/final_project/templates/layout.html
@@ -29,6 +29,7 @@
                       <li class="nav-item"><a class="nav-link" href="/sds">SDS</a></li>
                     </ul>
                     <ul class="navbar-nav ms-auto ml-5">
+                      <li class="nav-item"><a class="nav-link" href="/stock">Stock</a></li>
                       <li class="nav-item"><a class="nav-link" href="/buy">Buy Chemical</a></li>
                       <li class="nav-item"><a class="nav-link" href="/purchase_database">Order Log</a></li> 
                     </ul>
