--- a/final_project/static/styles.css
+++ b/final_project/static/styles.css
@@ -57,9 +57,15 @@ nav .navbar-brand
 }
 .search_CAS {
     text-align: center;
-    color:blue;
-    font-size: 30px;
+    color:#ee544c;
+    font-size: 20px;
     margin-top:100px
+}
+.search_CAS_number {
+  text-align: center;
+  color:#5891e2;
+  font-size: 50px;
+  margin-top:20px
 }
 
 .buy_request {
