stock removal tracker added

--- a/final_project/templates/layout.html
+++ b/final_project/templates/layout.html
@@ -29,9 +29,10 @@
                       <li class="nav-item"><a class="nav-link" href="/sds">SDS</a></li>
                     </ul>
                     <ul class="navbar-nav ms-auto ml-5">
-                      <li class="nav-item"><a class="nav-link" href="/stock">Stock</a></li>
-                      <li class="nav-item"><a class="nav-link" href="/buy">Buy Chemical</a></li>
-                      <li class="nav-item"><a class="nav-link" href="/purchase_database">Order Log</a></li> 
+                      <li class="nav-item"><a class="nav-link" href="/buy">Buy </a></li>
+                      <li class="nav-item"><a class="nav-link" href="/purchase_database"> Order Log </a></li> 
+                      <li class="nav-item"><a class="nav-link" href="/stock"> Stock Count </a></li>
+                      <li class="nav-item"><a class="nav-link" href="/removal_data"> Removal Log </a></li>
                     </ul>
                   </div>
         </div>
