--- a/final_project/templates/stock.html
+++ b/final_project/templates/stock.html
@@ -10,4 +10,21 @@
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto mt-5" id="chemical" name="chemical" placeholder="Chemical Name" type="text">
         <button class="btn button btn-primary mt-3" type="submit">Search Stock</button>
     </form>
+    <form action="/stock_removal" method="post" class="buy_request justify-content-center justify-axis-center">
+        <div class="buy_request justify-content-center justify-axis-center">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto mt-5" id="chemical" name="chemical" placeholder="Chemical" type="text">
+            <input autocomplete="off" class="form-control mx-auto w-auto mt-5" id="amount" name="amount" placeholder="Amount" type="number">
+            <select class="form-select select_tab" id="unit" name="unit">
+                <option selected disabled>Unit</option>
+                <option value="mL">mL</option>
+                <option value="L">L</option>
+                <option value="mg">mg</option>
+                <option value="L">g</option>
+                <option value="Kg">Kg</option>
+            </select>
+        </div>
+        <div class="buy_request justify-content-center justify-axis-center">
+        <button class="btn remove_button btn-primary" type="submit">Remove Stock</button>
+        </div>
+    </form>
 {% endblock %}
