error with label in removal of grams

--- a/final_project/templates/stock.html
+++ b/final_project/templates/stock.html
@@ -27,7 +27,7 @@
                 <option value="mL">mL</option>
                 <option value="L">L</option>
                 <option value="mg">mg</option>
-                <option value="L">g</option>
+                <option value="g">g</option>
                 <option value="Kg">Kg</option>
             </select>
         </div>
